dummy-grpc-clock/istio/client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-grpc-clock-client
spec:
  selector:
    matchLabels:
     app: dummy-grpc-clock-client
  replicas: 1
  template:
    metadata:
      labels:
        app: dummy-grpc-clock-client
    spec:
      containers:
      - name: dummy-grpc-clock-client
        image: szaqal/dummy-grpc-clock-client:latest
        imagePullPolicy: Always
