dummy-grpc-clock/istio/istio.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dummy-grpc-clock-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy-grpc-clock-server
spec:
  hosts:
  - "*"
  gateways:
  - dummy-grpc-clock-gateway
  tcp:
  - match:
    - port: 31400
    route:
    - destination:
        host: dummy-grpc-clock-server.default.svc.cluster.local
        port:
          number: 50051
